# polish-citizenship-portal

./: .env.local  .gitignore  .replit  CASE_CARDS_V2_QA_REPORT.md  Complete-N8N-Lindy-Setup-Guide.md  HELP_CENTER.md  HELP_CENTER_IMPLEMENTATION.md  HELP_CENTER_VISUAL.md  INTEGRATION-COMPLETE-SUMMARY.md  N8N-AI-Testing-Setup-Guide.md  QA-INFRASTRUCTURE-REPORT.md  README.md  README_HELP_CENTER.md  README_QA.md  Webhook-Testing-Verification.md  ai-search-analysis-report.md  auto-fix-and-retest-agent.mjs  automation-integration-guide.md  bf-command.sh  build.sh  complete-ai-testing-system.mjs  component-references.md  cookies.txt  copy-rules.js  custom-commands.md  enhanced-rules-verification.mjs  enhanced-webhook-endpoints.ts  esbuild.config.js  eslint.config.js  field-mapping-system.md  grok-verification-agent.mjs  headers.txt  image-usage-update.md  implementation-summary.txt  independent-ai-testing-agent.mjs  integration-requirements.txt  landing-page-performance-report.md  lindy-comprehensive-workflow.json  n8n-ai-testing-workflow.json  n8n-comprehensive-workflow.json  (+48 more)
backend/: db.py  main.py  requirements.txt  simple_main.py
client/: index-minimal.html  index.html  index.html.bak
data/: dropbox.json  email-notification-settings.json  lastPredeploy.json  progress.jsonl  qa-summary.json
e2e-tests/: 01-core-pages.spec.ts  02-document-workflows.spec.ts  03-family-tree-workflows.spec.ts  04-user-registration-workflows.spec.ts  05-advanced-features.spec.ts  06-ai-intake-functionality.spec.ts  README.md  continuous-testing.ts  global-setup.ts  test-dashboard.html
(+642 files in other folders)
