[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite==0.20.0",
    "bcrypt==4.1.3",
    "fastapi==0.115.0",
    "pdf2image==1.17.0",
    "pdfminer-six==20231228",
    "phonenumbers==8.13.42",
    "pillow==10.4.0",
    "pydantic==2.8.2",
    "pyjwt==2.9.0",
    "pytesseract==0.3.13",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "requests==2.32.3",
    "sqlalchemy==2.0.31",
    "twilio>=9.7.2",
    "uvicorn[standard]==0.30.6",
]
